@@ -1,9 +1,17 @@
+2007-12-14  Jari Aalto  <jari.aalto@cante.net>
+
+	* etc/template/postinstall.sh.tmp (InstallConffiles): Add cmp(1).
+	(CygbuildDefineGlobalMain): Rename CYGBUILD_FILE_MANIFEST_TO and
+	CYGBUILD_FILE_MANIFEST_FROM
+	(CygbuildInstallCygwinPartMain): Treat new postinstall-manifest.lst
+
 2007-12-13  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildCmdBuildPython): Change to
 	use `CygbuildRunPythonSetupCmd' will will print less output.
 	(CygbuildRunPythonSetupCmd): On error dispay results.
-
+	(CygbuildCmdInstallMain): Send $0 to custom
+	CUGWIN-PATCHES/instal.sh
 
 2007-12-12  Jari Aalto  <jari.aalto@cante.net>
 
